[package]
name = "loud-speaker"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
tokio = {version ="1.38.0",features = ["full"]}
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["std","sink"] }
opus = "0.3.0"
clap = {version = "4.5.7",features = ["cargo"]}